--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -53,6 +53,15 @@ button:active, a.btn:active {
     transform: translateY(3px);
 }
 
+.truncate {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+
 // Header
 
 header {
@@ -63,7 +72,7 @@ header {
 
 // utilities
 .utility-bar {
-    a {
+    .utility-link {
         color: white;
         font-weight: 200;
         text-decoration: none;
@@ -83,6 +92,7 @@ header {
 #home-carousel {
     position: fixed;
     top: 0;
+    width: 100%;
 }
 
 div.carousel-caption {
@@ -107,6 +117,18 @@ div.carousel-caption {
     &:hover {
         text-decoration: underline;
     }
+}
+
+// About Page
+
+body{
+  &.about-body {
+    // background: rgb(128,128,128);
+    // -webkit-background-size: cover;
+    // -moz-background-size: cover;
+    // -o-background-size: cover;
+    // background-size: cover;
+  }
 }
 
 // Rating stars
