--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -245,3 +245,11 @@ a.link-hover-only {
     font-family: 'Satisfy';
     font-size: 1.1rem;
 }
+
+// User Page
+
+.user-deets {
+  td {
+    padding: 0px 5px;
+  }
+}
