fixing some layout inconsistencies

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -29,10 +29,6 @@ img {
     display: inline-block;
 }
 
-p {
-    line-height: 2;
-}
-
 a {
     font-weight: 400;
 }
@@ -61,6 +57,9 @@ button:active, a.btn:active {
     text-overflow: ellipsis;
 }
 
+.line-height-2 {
+    line-height: 2;
+}
 
 // Header
 
@@ -235,7 +234,7 @@ a.link-hover-only {
 
 #toast-container {
     position: fixed;
-    z-index: 2;
+    z-index: 3;
     right: 50vw;
     margin-right: -175px;
     margin-top: 10px;
