--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10163,10 +10163,6 @@ img {
   display: inline-block;
 }
 
-p {
-  line-height: 2;
-}
-
 a {
   font-weight: 400;
 }
@@ -10193,6 +10189,10 @@ button:active, a.btn:active {
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.line-height-2 {
+  line-height: 2;
 }
 
 header {
@@ -10324,7 +10324,7 @@ a.link-hover-only {
 
 #toast-container {
   position: fixed;
-  z-index: 2;
+  z-index: 3;
   right: 50vw;
   margin-right: -175px;
   margin-top: 10px;
