--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -279,6 +279,10 @@ a.link-hover-only {
 
 // Search page
 
+.results-header {
+    display: inline;
+}
+
 .sorter {
     button, button:focus {
       box-shadow: 0 0 rgba(0, 0, 0, 0);
@@ -287,7 +291,7 @@ a.link-hover-only {
 }
 
 .search-dropdown {
-    max-width: 250px;
+    max-width: 200px;
 
     option {
       font-family: default;
@@ -295,5 +299,5 @@ a.link-hover-only {
 }
 
 #imageTitle, #postTitle {
-    max-width: 83%;
+    max-width: 60%;
 }
