--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -109,6 +109,23 @@ header {
     }
 }
 
+@media screen and (max-width: 991px){
+    .dropdown-columns{
+        height: 200px;
+        overflow-y:scroll;
+    }
+}
+
+@media screen and (min-width: 992px){
+    .dropdown-columns{
+        -moz-column-count:4; /* Firefox */
+        -webkit-column-count:4; /* Safari and Chrome */
+        column-count:4;
+        width: 600px;
+        height:280px;
+    }
+}
+
 // Home page
 
 // image carousel
