--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -21,6 +21,10 @@ body {
     }
 }
 
+i {
+    color: white;
+}
+
 img {
     max-width: 100%;
 }
@@ -59,6 +63,13 @@ button:active, a.btn:active {
 
 .line-height-2 {
     line-height: 2;
+}
+
+.button-no-style {
+    padding: 0; 
+    margin: 0;
+    border: 0;
+    background-color: transparent;
 }
 
 // Header
