--- a/static/css/_variables.scss
+++ b/static/css/_variables.scss
@@ -42,6 +42,7 @@ $border-radius: 1rem;
 $form-select-bg: $primary;
 $form-select-indicator-color: white;
 
+// Toast messages
 $toast-background-color: rgb(5, 81, 96, 0.8);
 $toast-header-background-color: $primary;
 $toast-header-border-color: transparent;
