--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10202,7 +10202,7 @@ a.btn:active {
   transform: translateY(3px);
 }
 
-.card:hover {
+.card-hover:hover {
   -webkit-box-shadow: 0px 0px 15px 5px rgba(5, 81, 96, 0.85);
   box-shadow: 0px 0px 15px 5px rgba(5, 81, 96, 0.85);
 }
