--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -9,16 +9,13 @@ body {
     max-width: 100vw;
 }
 
-body {
-    // & will only apply class to parent element
-    &.fixed-mountain-bg {
-        background: linear-gradient(rgba(0, 0, 0, 0.95), rgba(0, 0, 0, 0.95)),
-            url("../travel-images/carousel/mountain.jpg") no-repeat center center fixed;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-    }
+body.fixed-mountain-bg {
+    background: linear-gradient(rgba(0, 0, 0, 0.95), rgba(0, 0, 0, 0.95)),
+        url("../travel-images/carousel/mountain.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 i {
@@ -61,12 +58,11 @@ a.btn:active {
     transform: translateY(3px);
 }
 
-.card:hover {
+.card-hover:hover {
     // generated with https://html-css-js.com/css/generator/box-shadow/
     -webkit-box-shadow: 0px 0px 15px 5px rgba(5, 81, 96, 0.85);
     box-shadow: 0px 0px 15px 5px rgba(5, 81, 96, 0.85);
 }
-
 
 // Utility classes
 
@@ -91,19 +87,17 @@ a.btn:active {
 
 .small-container {
     max-width: 800px;
-}
+} 
 
 .link-no-color,
 .link-no-color:hover {
     color: currentColor;
 }
 
-
 // show color only on hover
 a.link-hover-only {
     color: currentColor;
 }
-
 
 // Google Maps
 
@@ -111,7 +105,6 @@ a.link-hover-only {
     height: 500px;
     border-radius: 1rem;
 }
-
 
 // Toast Messages
 
@@ -127,7 +120,6 @@ a.link-hover-only {
     font-family: "Satisfy";
     font-size: 1.1rem;
 }
-
 
 // Header
 
@@ -195,7 +187,6 @@ header {
     }
 }
 
-
 // Home page
 
 // image carousel
@@ -228,7 +219,6 @@ div.carousel-caption {
         text-decoration: underline;
     }
 }
-
 
 // Rating stars
 
@@ -263,7 +253,6 @@ $unfilledStarColor: #4c4444;
     }
 }
 
-
 // Country Page
 
 .flag-img {
@@ -284,7 +273,6 @@ $unfilledStarColor: #4c4444;
         float: right;
     }
 }
-
 
 // Image Page
 
@@ -308,7 +296,6 @@ $unfilledStarColor: #4c4444;
     }
 }
 
-
 // User Page
 
 .user-deets {
@@ -316,7 +303,6 @@ $unfilledStarColor: #4c4444;
         padding: 0px 5px;
     }
 }
-
 
 // Search page
 
