--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10207,6 +10207,10 @@ a.btn:active {
   box-shadow: 0px 0px 15px 5px rgba(5, 81, 96, 0.85);
 }
 
+.modal-backdrop.show {
+  opacity: 0.8;
+}
+
 .truncate {
   display: -webkit-box;
   -webkit-line-clamp: 3;
@@ -10224,6 +10228,10 @@ a.btn:active {
   margin: 0;
   border: 0;
   background-color: transparent;
+}
+
+.button-no-animation:active {
+  transform: none;
 }
 
 .small-container {
@@ -10398,6 +10406,15 @@ div.carousel-caption {
 #review-card .card-body {
   color: #bdbdbd;
   overflow-y: scroll;
+}
+
+#lightbox-img {
+  border-radius: 1rem;
+}
+
+#lightbox {
+  max-height: 100vh;
+  max-width: 100vw;
 }
 
 .user-deets td {
