--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -64,6 +64,10 @@ a.btn:active {
     box-shadow: 0px 0px 15px 5px rgba(5, 81, 96, 0.85);
 }
 
+.modal-backdrop.show {
+    opacity: 0.8;
+}
+
 // Utility classes
 
 .truncate {
@@ -85,9 +89,13 @@ a.btn:active {
     background-color: transparent;
 }
 
+.button-no-animation:active {
+    transform: none;
+}
+
 .small-container {
     max-width: 800px;
-} 
+}
 
 .link-no-color,
 .link-no-color:hover {
@@ -294,6 +302,15 @@ $unfilledStarColor: #4c4444;
         color: #bdbdbd;
         overflow-y: scroll;
     }
+}
+
+#lightbox-img {
+    border-radius: 1rem;
+}
+
+#lightbox {
+    max-height: 100vh;
+    max-width: 100vw;
 }
 
 // User Page
