pt 1 of treys fixes lol

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10441,6 +10441,7 @@ div.carousel-caption {
 #imageTitle,
 #postTitle {
   max-width: 60%;
+  color: black;
 }
 
 /*# sourceMappingURL=style.css.map */
