--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -39,7 +39,7 @@ h2,
 h3,
 h4,
 h5 {
-    font-family: "Montserrat";
+    font-family: "Montserrat", sans-serif;
 }
 
 h1,
@@ -192,6 +192,32 @@ header {
         column-count: 4;
         width: 600px;
         height: 280px;
+    }
+}
+
+// Posts
+
+.post-img {
+    width: 330px;
+    height: 238px;
+    opacity: .3;
+
+}
+
+.post-img[alt]:after {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 330px;
+    height: 238px;
+    background-color: #1B1B1B;
+    content: attr(alt);
+}
+
+.card-body {
+    .text-muted {
+        text-shadow: 0 1px black;
     }
 }
 
